tests/snapshots/snapshot_tests__node-pnpm-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: node, pnpm"
        }
      ],
      "assets": {
        "mise.toml": "[tools.node]\nversion = \"22.0.0\"\n\n[tools.pnpm]\nversion = \"9.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "install",
      "inputs": [
        {
          "step": "packages:mise"
        }
      ],
      "commands": [
        {
          "path": "/app/node_modules/.bin"
        },
        {
          "cmd": "mkdir -p /app/node_modules/.cache"
        },
        {
          "src": "package.json",
          "dest": "package.json"
        },
        {
          "src": "pnpm-lock.yaml",
          "dest": "pnpm-lock.yaml"
        },
        {
          "path": "/pnpm"
        },
        {
          "cmd": "pnpm add -g node-gyp"
        },
        {
          "cmd": "pnpm install --frozen-lockfile --prefer-offline"
        }
      ],
      "variables": {
        "CI": "true",
        "NODE_ENV": "production",
        "NPM_CONFIG_FUND": "false",
        "NPM_CONFIG_PRODUCTION": "false",
        "NPM_CONFIG_UPDATE_NOTIFIER": "false",
        "PNPM_HOME": "/pnpm"
      },
      "caches": [
        "pnpm-install"
      ]
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "install"
        },
        {
          "include": [
            "."
          ],
          "local": true
        }
      ],
      "commands": [
        {
          "cmd": "pnpm run build"
        }
      ],
      "secrets": [
        "*"
      ],
      "caches": [
        "node-modules"
      ]
    },
    {
      "name": "packages:apt:runtime",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-runtime:latest"
        }
      ],
      "commands": [
        {
          "cmd": "sh -c 'apt-get update && apt-get install -y libatomic1'",
          "customName": "install apt packages: libatomic1"
        }
      ],
      "caches": [
        "apt",
        "apt-lists"
      ]
    }
  ],
  "caches": {
    "node-modules": {
      "directory": "/app/node_modules/.cache",
      "type": "shared"
    },
    "pnpm-install": {
      "directory": "/root/.local/share/pnpm/store/v3",
      "type": "shared"
    }
  },
  "deploy": {
    "base": {
      "step": "packages:apt:runtime"
    },
    "inputs": [
      {
        "include": [
          "/mise/shims",
          "/mise/installs",
          "/usr/local/bin/mise",
          "/etc/mise/config.toml",
          "/root/.local/state/mise"
        ],
        "step": "packages:mise"
      },
      {
        "include": [
          "/app/node_modules"
        ],
        "step": "build"
      },
      {
        "exclude": [
          "node_modules",
          ".yarn"
        ],
        "include": [
          "/root/.cache",
          "."
        ],
        "step": "build"
      }
    ],
    "startCommand": "pnpm run start",
    "variables": {
      "CI": "true",
      "NODE_ENV": "production",
      "NPM_CONFIG_FUND": "false",
      "NPM_CONFIG_PRODUCTION": "false",
      "NPM_CONFIG_UPDATE_NOTIFIER": "false"
    }
  }
}
