tests/snapshots/snapshot_tests__node-react-router-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: node"
        }
      ],
      "assets": {
        "mise.toml": "[tools.node]\nversion = \"22.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "install",
      "inputs": [
        {
          "step": "packages:mise"
        }
      ],
      "commands": [
        {
          "path": "/app/node_modules/.bin"
        },
        {
          "cmd": "mkdir -p /app/node_modules/.cache"
        },
        {
          "src": "package-lock.json",
          "dest": "package-lock.json"
        },
        {
          "src": "package.json",
          "dest": "package.json"
        },
        {
          "cmd": "npm ci"
        }
      ],
      "variables": {
        "CI": "true",
        "NODE_ENV": "production",
        "NPM_CONFIG_FUND": "false",
        "NPM_CONFIG_PRODUCTION": "false",
        "NPM_CONFIG_UPDATE_NOTIFIER": "false"
      },
      "caches": [
        "npm-install"
      ]
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "install"
        },
        {
          "include": [
            "."
          ],
          "local": true
        }
      ],
      "commands": [
        {
          "cmd": "npm run build"
        }
      ],
      "secrets": [
        "*"
      ],
      "caches": [
        "node-modules",
        "react-router"
      ]
    },
    {
      "name": "packages:caddy",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "cmd": "mise install-into caddy@2.0.0 /arcpack/caddy"
        },
        {
          "path": "/arcpack/caddy"
        },
        {
          "path": "/arcpack/caddy/bin"
        }
      ]
    },
    {
      "name": "packages:apt:runtime",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-runtime:latest"
        }
      ],
      "commands": [
        {
          "cmd": "sh -c 'apt-get update && apt-get install -y libatomic1'",
          "customName": "install apt packages: libatomic1"
        }
      ],
      "caches": [
        "apt",
        "apt-lists"
      ]
    }
  ],
  "caches": {
    "node-modules": {
      "directory": "/app/node_modules/.cache",
      "type": "shared"
    },
    "npm-install": {
      "directory": "/root/.npm",
      "type": "shared"
    },
    "react-router": {
      "directory": "/app/.react-router",
      "type": "shared"
    }
  },
  "deploy": {
    "base": {
      "step": "packages:apt:runtime"
    },
    "inputs": [
      {
        "include": [
          "/arcpack/caddy"
        ],
        "step": "packages:caddy"
      },
      {
        "include": [
          "build/client"
        ],
        "step": "build"
      }
    ],
    "startCommand": "caddy run --config /app/Caddyfile --adapter caddyfile",
    "variables": {
      "CI": "true",
      "NODE_ENV": "production",
      "NPM_CONFIG_FUND": "false",
      "NPM_CONFIG_PRODUCTION": "false",
      "NPM_CONFIG_UPDATE_NOTIFIER": "false"
    },
    "paths": [
      "/arcpack/caddy",
      "/arcpack/caddy/bin"
    ]
  }
}
